# orquestra-manifest

./: .gitignore  Makefile  README.rst  manifest.json  pyproject.toml
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  introduction.rst
orquestra_manifest/: common.py  copyright.py  morq.py  sphinx_tools.py  tabler.py  utils.py
repos/: manifest.json
tests/: test_Common.py  test_common.py  test_morq.py  test_sphinx.py  test_utils.py
tests/data/: manifest.json
