[tool.poetry]
name = "orquestra-manifest"
version = "0.1.0"
description = "Enforce version control on Orquestra"
authors = ["Zapata Computing <zapata@zapatacomputing.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
orqm = "orquestra_manifest.common:orqm"
