[tool.poetry]
name = "orquestra-manifest"
version = "0.1.0"
description = "Enforce version control on Orquestra"
authors = ["Zapata Computing <zapata@zapatacomputing.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
Sphinx = "^4.3.2"
sphinx-autoapi = "^1.8.4" 
sphinx_rtd_theme = "*"
clint = "^0.5.1"
argcomplete = "^2.0.0"
GitPython = ">=3.1.24"
pytest = "*"
black = "*"
isort = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
morq = "orquestra_manifest.common:morq_cli"

# [tool.pytest]
[tool.pytest.ini_options]
norecursedirs = ["tests/data/*"]
log_cli = true
log_cli_level = "DEBUG"
